# agentcore

./: .env.example  .gitignore  .pre-commit-config.yaml  16周-AI-Agent工程师养成计划.md  16周计划.html  CLAUDE.md  README.md  pyproject.toml
docs/: daily-log-template.txt
docs/llm-internals/: day1-tokenization.txt  day2-transformer-attention.txt  day3-training-pipeline.txt
docs/week1/: day2-fastapi.txt  day3-openai-sdk.txt  day4-anthropic-sdk.txt  day5-error-handling.txt  day6-学习日志.txt  day7-周复盘.txt  一周Agent开发学习总结（Week 1：LLM API深度掌握）.docx
docs/week2/: day1-prompt-theory.txt  day2-prompt-templates.txt  day3-structured-output.txt  day4-tool-loop.txt  day5-prompt-eval.txt  day6-system-prompt-design.txt  day7-周复盘.txt
docs/week3/: day1-rag-theory.txt  day2-chromadb.txt  day3-chunking.txt  day4-retrieval.txt  day6-evaluation.txt  day7-周复盘.txt  rag-pipeline.html  rag-pitfalls-article.txt
docs/week4/: day1-design.txt  day2-backend.txt  day3-frontend.txt  day4-features.txt  day5-testing.txt  day6-project-wrap-up.txt
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/chat/: chat-area.tsx  input-area.tsx  markdown-renderer.tsx  sidebar.tsx
frontend/src/lib/: api.ts
src/study_agent/: __init__.py  anthropic_demo.py  chromadb_demo.py  chromadb_openai_demo.py  chromadb_vs_bruteforce.py  day5_self_check.py  error_handling_demo.py  jinja2_demo.py  llm_client.py  main.py  openai_demo.py  w2d3_demo.py  w2d4_demo.py  w2d5_demo.py  w2d6_demo.py  w3d3_chunking_demo.py  w3d4_retrieval_demo.py  w3d6_evaluation.py  w4d2_test.py
src/study_agent/agent/: __init__.py  conversation.py  kb_agent.py  knowledge_base.py
src/study_agent/api/: __init__.py  app.py  chat.py  kb.py  upload.py
src/study_agent/config/: __init__.py  settings.py
src/study_agent/llm/: __init__.py  client.py  retry.py
src/study_agent/prompt/: demo.py
src/study_agent/prompt/templates/: rag_generation.j2
src/study_agent/rag/: __init__.py  chunking.py  embedding.py  generator.py  pipeline.py  retriever.py  security.py
src/study_agent/tools/: __init__.py  base.py
tests/: test_agent.py  test_api.py  test_chunking.py  test_error_handling.py  test_security.py
