[project]
name = "study-agent"
version = "0.1.0"
description = "AI Agent 学习项目"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "openai (>=2.38.0,<3.0.0)",
    "anthropic (>=0.104.1,<0.105.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "python-docx (>=1.2.0,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"


[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "ruff (>=0.15.13,<0.16.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["*.j2"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
# demo 脚本中的长文本（模拟文档内容）允许超长行
"src/study_agent/w3d4_retrieval_demo.py" = ["E501"]
"src/study_agent/w3d5_generation_demo.py" = ["E501"]
"src/study_agent/w3d6_evaluation.py" = ["E501"]
"src/study_agent/w3d3_chunking_demo.py" = ["E501", "N806"]
"src/study_agent/w2d3_demo.py" = ["E501"]
"src/study_agent/w2d4_demo.py" = ["E501"]
"src/study_agent/w2d5_demo.py" = ["E501"]
"src/study_agent/w2d6_demo.py" = ["E501"]
"src/study_agent/w4d2_test.py" = ["E501"]
"src/study_agent/chromadb_openai_demo.py" = ["E501", "N806"]
"src/study_agent/chromadb_demo.py" = ["E501"]
"src/study_agent/chromadb_vs_bruteforce.py" = ["E501", "N806"]
"src/study_agent/jinja2_demo.py" = ["E501"]
"src/study_agent/prompt/demo.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["study_agent"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
# 排除 demo 脚本、测试文件、FastAPI 路由（装饰器丢失类型信息）
exclude = [
    "tests/",
    "src/study_agent/api/",
    "src/study_agent/w2d[2-6]_demo\\.py",
    "src/study_agent/w3d[3-6]_\\w+\\.py",
    "src/study_agent/w4d[2-9]_\\w+\\.py",
    "src/study_agent/chromadb_.*\\.py",
    "src/study_agent/jinja2_demo\\.py",
    "src/study_agent/(openai|anthropic|error_handling)_demo\\.py",
    "src/study_agent/day5_self_check\\.py",
    "src/study_agent/llm_client\\.py",
    "src/study_agent/prompt/demo\\.py",
]

[[tool.mypy.overrides]]
module = [
    "openai",
    "anthropic",
    "tenacity",
    "jinja2",
    "dotenv",
    "chromadb",
    "fastapi.*",
    "pydantic",
    "sentence_transformers",
    "docx",
    "PyPDF2",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["study_agent.rag.*", "study_agent.agent.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
